Cleanup and extracted util methods to cdb.core.util

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -83,7 +83,9 @@
   <script src="../src/core/template.js"></script>
   
   <script src="../src/core/view.js"></script>
-  
+
+  <script src="../src/core/util.js"></script>
+
   <script src="../src/geo/geometry.js"></script>
   
   <script src="../src/geo/map.js"></script>
