--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -82,10 +82,10 @@
   
   <script src="../src/core/template.js"></script>
   
-  <script src="../src/core/view.js"></script>
-
   <script src="../src/core/util.js"></script>
-
+  
+  <script src="../src/core/view.js"></script>
+  
   <script src="../src/geo/geometry.js"></script>
   
   <script src="../src/geo/map.js"></script>
@@ -222,7 +222,7 @@
   
   <script src="spec/geo/geometry.spec.js"></script>
   
-  <script src="spec/geo/gmaps.spec.js"></script>
+  <script src="spec/geo/gmaps/gmaps.spec.js"></script>
   
   <script src="spec/geo/gmaps_cartodb_layer/hide.js"></script>
   
@@ -232,25 +232,25 @@
   
   <script src="spec/geo/gmaps_cartodb_layer/show.js"></script>
   
-  <script src="spec/geo/infowindow.spec.js"></script>
-  
   <script src="spec/geo/layer_definition.spec.js"></script>
   
-  <script src="spec/geo/layer_selector.spec.js"></script>
-  
-  <script src="spec/geo/leaflet.spec.js"></script>
-  
-  <script src="spec/geo/legend.spec.js"></script>
+  <script src="spec/geo/leaflet/leaflet.spec.js"></script>
   
   <script src="spec/geo/map.spec.js"></script>
-  
-  <script src="spec/geo/mobile.spec.js"></script>
   
   <script src="spec/geo/overlays/annotation.spec.js"></script>
   
   <script src="spec/geo/ui/header.spec.js"></script>
   
   <script src="spec/geo/ui/infobox.js"></script>
+  
+  <script src="spec/geo/ui/infowindow.spec.js"></script>
+  
+  <script src="spec/geo/ui/layer_selector.spec.js"></script>
+  
+  <script src="spec/geo/ui/legend.spec.js"></script>
+  
+  <script src="spec/geo/ui/mobile.spec.js"></script>
   
   <script src="spec/geo/ui/time_slider.spec.js"></script>
   
