--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -122,6 +122,8 @@
   
   <script src="../src/geo/ui/fullscreen.js"></script>
   
+  <script src="../src/geo/sublayer.js"></script>
+  
   <script src="../src/geo/layer_definition.js"></script>
   
   <script src="../src/geo/common.js"></script>
@@ -239,6 +241,8 @@
   <script src="spec/geo/map.spec.js"></script>
   
   <script src="spec/geo/overlays/annotation.spec.js"></script>
+  
+  <script src="spec/geo/sublayer.spec.js"></script>
   
   <script src="spec/geo/ui/header.spec.js"></script>
   
