--- a/examples/leaflet_sandwich.html
+++ b/examples/leaflet_sandwich.html
@@ -39,7 +39,7 @@
         })
         //.addTo(map);
 
-        // add cartodb layer with one sublayer
+        // add cartodb layer with multiple sublayers of different types
         cartodb.createLayer(map, {
           user_name: 'examples',
           type: 'cartodb',
@@ -52,8 +52,11 @@
             {
                sql: 'select * from country_boundaries',
                cartocss: '#layer { polygon-fill: #F00; polygon-opacity: 0.3; line-color: #F00; }'
-            }, 
+            },
           ]
+        }, {
+          // Render all types of sublayers
+          render: 'all'
         })
         .addTo(map)
         .done(function(layer) {
