Added example of urlTemplate and subdomains

--- a/examples/leaflet_sandwich.html
+++ b/examples/leaflet_sandwich.html
@@ -56,7 +56,7 @@
           ]
         }, {
           // Render all types of sublayers
-          render: 'all'
+          sublayerTypes: 'all'
         })
         .addTo(map)
         .done(function(layer) {
