Unbind events on clean

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -262,6 +262,8 @@
   
   <script src="spec/ui/common/dialog.spec.js"></script>
   
+  <script src="spec/ui/common/dropdown.spec.js"></script>
+  
   <script src="spec/ui/common/notification.spec.js"></script>
   
   <script src="spec/ui/common/table.spec.js"></script>
