Example points to cartodb.js

--- a/examples/leaflet_sandwich.html
+++ b/examples/leaflet_sandwich.html
@@ -19,7 +19,7 @@
     <div id="map"></div>
 
     <!-- include cartodb.js library -->
-    <script src="http://libs.cartocdn.com/cartodb.js/v3/3.14/cartodb.core.js"></script>
+    <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script>
 
     <script>
 
