--- a/test_describe.html
+++ b/test_describe.html
@@ -111,27 +111,28 @@
         var mssg = "";
         // these columns made the cut in an analysis in python
         // code here: http://nbviewer.ipython.org/gist/ohasselblad/b2475c95a23c5e070264
-        var make_the_cut = ['areasource', 'bsmtcode', 'builtcode', 'irrlotcode', 'ownertype', 'plutomapid', 'proxcode', 'schooldist', 'splitzone'];
+        // var make_the_cut = ['areasource', 'bsmtcode', 'builtcode', 'irrlotcode', 'ownertype', 'plutomapid', 'proxcode', 'schooldist', 'splitzone'];
         if (stats.type == 'number') {
           if (['A','U'].indexOf(stats.dist_type) != -1) {
             // apply divergent scheme
-            css = CSS.choropleth(stats.quantiles, column, geometryType, ramps.divergent);
+            css = CSS.choropleth(stats.jenks, column, geometryType, ramps.divergent);
           } else if (stats.dist_type === 'F') {
             css = CSS.choropleth(stats.equalint, column, geometryType, ramps.blue);
           } else {
               if (stats.dist_type === 'J') {
-                css =  CSS.choropleth(stats.quantiles, column, geometryType, ramps.blue);
+                css =  CSS.choropleth(stats.headtails, column, geometryType, ramps.blue);
               } else {
                 var inverse_ramp = (_.clone(ramps.blue)).reverse();
-                css =  CSS.choropleth(stats.quantiles, column, geometryType, inverse_ramp);
+                css =  CSS.choropleth(stats.headtails, column, geometryType, inverse_ramp);
               }
           }
           mssg = '<span style="font-weight: bold; text-decoration: underline;">' + column + "</span><br /> std: " + stats.stddev + "<br /> avg: " + stats.avg + " <br /> dist type: " + stats.dist_type;
         } else if(stats.type == 'string') {
-            if (make_the_cut.indexOf(column) != -1) {
-                mssg = '<span style="font-weight: bold; text-decoration: underline;">' + column + "</span><br /> PASSES :) -- (#uniques: " + stats.distinct + " null%: " + stats.count_nulls + ")";
+          console.log("column " + column + " passes?",stats.passes);
+            if (stats.passes) {
+                mssg = '<span style="font-weight: bold; text-decoration: underline;">' + column + "</span><br /> PASSES<br />#uniques: " + stats.distinct + "<br />null%: " + stats.count_nulls + "<br />90% in first 10 categories? " + stats.weight + "";
             } else {
-                mssg = '<span style="font-weight: bold; text-decoration: underline;">' + column + "</span><br /> DOESN'T PASS -- (#uniques: " + stats.distinct + " null%: " + stats.count_nulls + ")";
+                mssg = '<span style="font-weight: bold; text-decoration: underline;">' + column + "</span><br /> DOESN'T PASS<br />#uniques: " + stats.distinct + "<br />null%: " + stats.count_nulls + "<br />90% in first 10 categories? " + stats.weight + "";
             }
           css = CSS.category(stats.hist.slice(0, ramps.cat.length).map(function(r) { return r[0]; }), column, geometryType)
         }
